k8s/kong-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: new-kong-gateway
  labels:
    project: kong
    app: kong-gateway
    provider: thlaegler
    group: org.laegler.image.kong
