k8s/kong-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong-gateway
  namespace: new-kong-gateway
  labels:
    project: kong
    app: kong-gateway
    provider: thlaegler
    group: org.laegler.image.kong
spec:
  template:
    metadata:
      labels:
        app: kong-gateway
    spec:
      containers:
      - name: kong-gateway
        image: gcr.io/example/kong-gateway:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: api-http
          containerPort: 8000
        - name: api-https
          containerPort: 8443
        - name: admin-http
          containerPort: 8001
        - name: admin-https
          containerPort: 8444
        readinessProbe:
          exec:
            command:
            - kong
            - health
          initialDelaySeconds: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
