k8s/kong-postgres-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong-postgres
  namespace: new-kong-gateway
  labels:
    project: kong
    app: kong-postgres
    provider: thlaegler
    group: org.laegler.image.kong
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kong-postgres
    spec:
      containers:
      - name: kong-postgres
        image: postgres:9.6
        ports:
        - name: pgql
          containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pg-data
      volumes:
      - name: pg-data
        emptyDir: {
          }
