k8s/kong-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-postgres
  namespace: new-kong-gateway
  labels:
    project: kong
    app: kong-postgres
    provider: thlaegler
    group: org.laegler.image.kong
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: kong-postgres
